fix icon overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,14 +50,14 @@ li, a, button {
     font-weight: 500px;
     font-size: 1rem;
     color: #36454F;
-    display: inline-block;
+    display: inline;
     text-decoration: none;
 
 }
 
 .navbar {
     max-width: 1200px;
-    flex-direction: row;
+    flex-direction:row;
 }
 
 .nav_links {
@@ -66,7 +66,7 @@ li, a, button {
 }
 
 
-.nav_links , li {
+.nav_links  {
     display: inline-block;
     padding: 0px 20px;
 }
@@ -92,8 +92,7 @@ button {
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-inline: 10px;
 }
 
 button:hover {
@@ -240,18 +239,16 @@ footer p > i {
 }
 
 .social-networks {
-    text-align: center;
-    
+    text-align: inline;
+    display: flex;
+    justify-content: center ;
 }
 
-.social-networks>li {
-    display: inline;
-}
 
 .social-networks i {
     font-size: 400%;
     margin: 0 auto;
-    padding: 5%;
+    
     
 }
 /* sign up form */
@@ -367,7 +364,7 @@ input:focus, textarea {
 
     button {
         padding: 5px 15px;
-        margin-left: 366px;
+       
     }
 
     #hero-image {
@@ -406,7 +403,78 @@ input:focus, textarea {
     }
 }
 
-/* Mobile devies */
-@media only screen and (max-width: 767px) {
+/* Mobile devies 480px down */
+@media screen and (max-width: 480px){
+    /* header logo , nav */
+    header div {
+        left:20px;
+    }
     
-} 
+    header  div a {
+        font-family: Roboto, sans-serif;
+        font-size: 30px;
+    }
+
+    li, a, button {
+        font-family: Roboto, sans-serif;
+        font-weight: 500px;
+        font-size: 15px;
+        color: #36454F;
+        text-decoration:none;
+        display: row;
+        justify-content: space-evenly;
+    }
+    
+    button {
+        margin: 5px;
+
+    }
+    /* hero img and cover text */
+    
+    #hero-image {
+        width:100%;
+        height: 470px;
+    }
+    #cover-text {
+        width: 300px;
+        height: 200px;
+      
+    }
+    
+    #cover-text {
+        top:20px;
+        left:20px
+    }
+
+    /* paragraph container , text-heading */
+
+   
+
+    /* box , img and iframe*/
+    .box {
+        padding: ;
+        margin: 5px;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    /* footer */
+    .social-networks {
+        font-size: small;
+        
+       
+    }
+    li, a, button {
+        font-family: Roboto, sans-serif;
+        font-weight: 10px;
+        font-size: 10px;
+        color: #36454F;
+        text-decoration: none;
+        display: center;
+        text-align: center;
+        
+      }
+
+
+
+
